navbar and breadcrumbs

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,10 +29,20 @@
 	color: #0f0f0f;
 }
 
+body{
+	padding:50px 0px 0px 0px;
+	z-index: 0;
+
+}
+
+.navbar-dark{
+	background: #512DA8;
+}
+
 .container-custom{
 	margin: 0px;
 }
 
-.container{
-	padding-bottom: 50px;
-}
+/*.container{*/
+	/*padding-bottom: 50px;*/
+/*}*/
