--- a/css/styles.scss
+++ b/css/styles.scss
@@ -77,3 +77,24 @@ body{
     z-index: 1;
 }
 
+.modal-header{
+    background:$background-dark;
+    color:floralwhite;
+}
+
+.modal-body{
+    background:$background-pale;
+}
+
+.modal{
+    .modal-header{
+    .close{
+    color:floralwhite;
+    }
+    }
+}
+
+.modal-footer{
+    background:$background-pale;   
+}
+
