--- a/css/styles.css
+++ b/css/styles.css
@@ -52,3 +52,16 @@ body {
   position: absolute;
   bottom: 0px;
   z-index: 1; }
+
+.modal-header {
+  background: #512DA8;
+  color: floralwhite; }
+
+.modal-body {
+  background: #D1C4E9; }
+
+.modal .modal-header .close {
+  color: floralwhite; }
+
+.modal-footer {
+  background: #D1C4E9; }
