--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ body {
   color: floralwhite; }
 
 .modal-body {
-  background: #D1C4E9; }
+  background: #512DA8; }
 
 .modal .modal-header .close {
   color: floralwhite; }
